ocp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
